# verse

./: Cargo.toml  FEATURE_MATRIX.md  LICENSE  README.md
examples/: arrays.verse  classes.verse  enums.verse  factorial.verse  fizzbuzz.verse  functions.verse  loops.verse  maps.verse  options.verse  returns.verse  structs.verse  tuples.verse
src/: ast.rs  checker.rs  colors.rs  compiler_passes.rs  desugar.rs  digest.rs  error.rs  eval.rs  ir.rs  lexer.rs  lib.rs  main.rs  native.rs  parser.rs  pipeline.rs  project.rs  runtime.rs  semantic_analyzer.rs  semantics.rs  syntax.rs  token.rs
src/checker/: classes.rs  definition.rs  effects.rs  functions.rs  modules.rs  scopes.rs  semantic_class.rs  semantic_expression.rs  semantic_function.rs  semantic_scope.rs  semantic_statement.rs  semantic_types.rs  type_variables.rs  types.rs
src/eval/: builtins.rs  bytecode.rs  color_ops.rs  failure.rs  mod.rs  numeric.rs  player_map.rs  scope.rs  (+5 more)
tests/: arrays.rs  arrays_ft_plan.rs  builtins.rs  classes.rs  classes_ft_plan.rs  colors.rs  concurrency.rs  constants.rs  control_flow.rs  desugar.rs  diagnostics.rs  enums.rs  failure.rs  failure_ft_plan.rs  for_ft_plan.rs  functions.rs  functions_overload_ft_plan.rs  functions_unreachable_ft_plan.rs  ir.rs  language.rs  lexical.rs  maps.rs  modules.rs  mutability_ft_plan.rs  mutation.rs  native_api.rs  numeric.rs  options.rs  options_ft_plan.rs  persistence_evolution_ft_plan.rs  pipeline.rs  platform.rs  prediction_host_ft_plan.rs  structs.rs  structs_enums_ft_plan.rs  tuples.rs  types.rs  types_ft_plan.rs
verse-rs-macros/: Cargo.toml
(+6 files in other folders)
